UI/UX tweaks. Clearing the page no longer causes a full refresh, load and clear links are again separated by a line break on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,11 +18,8 @@ hr {
 }
 
 .user-input-row {
+	padding-top: 1.25rem;
 	border-top: thin solid lightgray;
-}
-
-.user-input-row .user-input-container {
-	margin-top: 1.5rem;
 }
 
 input[type="text"],
